TD-4641 is related to subentry indents
XhtmlExport tests are related to changes in Flex export format
ExportDictionaryCssFileComparison is related to subentry style change
RunningHeaderNone seems to actually be related to TD-4632

--- a/DistFiles/Styles/Dictionary/Dictionary.css
+++ b/DistFiles/Styles/Dictionary/Dictionary.css
@@ -234,13 +234,7 @@
 .slotname { }
 .slot-name { }
 .slots { }
-.subentry {
-        text-indent: -12pt;
-        margin-left: 18pt;
-        padding-left: 12pt;
-        padding-bottom: 2pt;
-        padding-top: 1pt;
-}
+.subentry { }
 .subentry-type { }
 .translations { }
 .translations-minor { }
