--- a/DistFiles/Styles/Dictionary/epub_Dictionary.css
+++ b/DistFiles/Styles/Dictionary/epub_Dictionary.css
@@ -169,13 +169,7 @@ padding-right: 5px;
 .sense {
     font-weight: normal;
 }
-.subentry {
-        text-indent: -1%;
-        margin-left: 1.5%;
-        padding-left: 1%;
-        padding-bottom: 2pt;
-        padding-top: 1pt;
-}
+.subentry { }
 .xhomographnumber {
     font-weight: normal;
     font-style: normal;
