--- a/DistFiles/Styles/Dictionary/epub_Pictures.css
+++ b/DistFiles/Styles/Dictionary/epub_Pictures.css
@@ -58,3 +58,11 @@ padding-bottom: 20pt;
 margin-bottom: 20pt;
 padding-bottom: 20pt;
 }
+.entry> .picture{
+margin-bottom: 20pt;
+padding-bottom: 20pt;
+}
+.entry .picture{		
+margin-bottom: 20pt;
+padding-bottom: 20pt;
+}
