--- a/DistFiles/Styles/Dictionary/epub_DictionaryRightAlign.css
+++ b/DistFiles/Styles/Dictionary/epub_DictionaryRightAlign.css
@@ -53,7 +53,7 @@ font-style: normal;
 .translation-sub {
     font-style : italic;
 }
-.headwordminor, .headword, .headword-minor {
+.headwordminor, .headword-minor {
     font-weight: bold;
     font-style: normal;
     margin-right: 10px;
