--- a/DistFiles/Styles/Dictionary/MexicoStyles.css
+++ b/DistFiles/Styles/Dictionary/MexicoStyles.css
@@ -10,9 +10,27 @@ a {color: rgb(0,0,255);}
     text-indent: -12pt;
     margin-left: 36pt;
 }
+
+.minorentryvariant {
+    text-indent: -12pt;
+    margin-left: 12pt;
+}
+
+.mainentrycomplex {
+    text-indent: -12pt;
+    margin-left: 12pt;
+}
+
+.visiblecomplexformbackrefs{
+	text-indent: -12pt;
+	margin-left: 12pt;	
+	color: rgb(0,0,0);	
+}
+
 .complexform:before {
     content: "";
 }
+
 .complexform-summary {
     color: rgb(128,128,0);
 }
@@ -84,27 +102,64 @@ a {color: rgb(0,0,255);}
     counter-increment: subentryCounter;
 }
 
-.complexform-form + .grammatical-info-complexform::before {
+.complexform-form + .grammatical-info-complexform:before {
     content: "\A0";
 }
-.complexform-form + .complexform-summarydef::before {
+.complexform-form + .complexform-summarydef:before {
     content: "\A0";
 }
-.partofspeech::before {
+.partofspeech:before {
     content: "\A0";
 }
-.complexform-summarydef::before {
+.complexform-summarydef:before {
     content: "\A0";
 }
-.scientific-name::before {
+.scientific-name:before {
     content: "\A0";
 }
-.example::before{
+.example:before{
 	content: "\A0";
 }
-.translations::before{
+.translations:before{
 	content: "\A0";
 }
-.variantrefs1::before{
+.variantrefs1:before{
     content: "\A0\A0";
+}
+
+
+.visiblecomplexformbackrefs .visiblecomplexformbackref-ps
+{
+	display: inline;
+}
+.visiblecomplexformbackref-ps{
+	display: inline;
+}
+
+.visiblecomplexformbackref{
+	display: inline;
+}
+
+.entry .visiblecomplexformbackref {
+	display: inline;
+}
+
+.mainentrycomplex .visiblecomplexformbackref{	
+	display: inline;
+}
+.morphosyntaxanalyses-ps{
+	display: inline;
+}
+.morphosyntaxanalyses{
+	display: inline;
+}
+.partofspeech{
+	display: inline;
+}
+
+.partofspeech-ps{
+	display: inline;
+}
+.headword{
+	display: inline-table;
 }
