TD-4662 Referenced headword regular in Flex and bold

--- a/DistFiles/Styles/Dictionary/Dictionary.css
+++ b/DistFiles/Styles/Dictionary/Dictionary.css
@@ -286,3 +286,10 @@ text-align: justify;
        margin-left: 12pt;
        text-indent: -12pt;
 }
+
+.mainentrysubentries .mainentrysubentry > .headword > span[lang|= "*"]{
+   font-weight: normal;
+}
+.mainentrysubentries .mainentrysubentry > .headword > span {
+   font-weight: normal;
+}
