--- a/DistFiles/Styles/Scripture/Running_Head_Ref_None.css
+++ b/DistFiles/Styles/Scripture/Running_Head_Ref_None.css
@@ -9,7 +9,7 @@
 @page :left {
     @top-left {
         -ps-referenceFormat: "none";
-        content: 'none';
+        content: '';
     }
     @top-center  { content: ''; }
     @top-right     { content: ''; }
@@ -22,7 +22,7 @@
     @top-center  { content: ''; }
     @top-right     {
         -ps-referenceFormat: "none";
-        content: 'none';
+        content: '';
     }
     @bottom-left   { content: ''; }
     @bottom-center { content: ''; }
