TD-4662 Referenced headword regular in Flex and bold

--- a/DistFiles/Styles/Dictionary/Dictionary.css
+++ b/DistFiles/Styles/Dictionary/Dictionary.css
@@ -287,9 +287,8 @@ text-align: justify;
        text-indent: -12pt;
 }
 
-.mainentrysubentries .mainentrysubentry > .headword > span[lang|= "*"]{
-   font-weight: normal;
+.configtargets .configtarget .headword > span {
+	font-weight: normal;
 }
-.mainentrysubentries .mainentrysubentry > .headword > span {
-   font-weight: normal;
-}
+
+
