--- a/src/Test/CssSimpler/TestFiles/Expected/PseudoRev1.css
+++ b/src/Test/CssSimpler/TestFiles/Expected/PseudoRev1.css
@@ -30,48 +30,48 @@ a {
    clear: both;
    white-space: pre-wrap;
 }
-.reversalindexentry .reversalform > span[lang|= "en"]{
+.reversalindexentry > .reversalform > span[lang|= "en"]{
    font-weight: bold;
 }
-.reversalindexentry .reversalform > span {
+.reversalindexentry > .reversalform > span {
    font-weight: bold;
 }
-.reversalindexentry .referringsense > .headword[lang|= "bzh"]{
+.reversalindexentry > .referringsenses > .sensecontent > .referringsense > .headword[lang|= "bzh"]{
    font-weight: bold;
 }
-.reversalindexentry .referringsense > .headword {
+.reversalindexentry > .referringsenses > .sensecontent > .referringsense > .headword {
    font-weight: bold;
 }
-.reversalindexentry .owner_minimallexreferences > .ownertype_abbreviation[lang|= "en"]{
+.reversalindexentry > .referringsenses > .sensecontent > .referringsense > .owner_minimallexreferences > .ownertype_abbreviation[lang|= "en"]{
    font-style: italic;
 }
-.reversalindexentry .owner_minimallexreferences > .ownertype_abbreviation {
+.reversalindexentry > .referringsenses > .sensecontent > .referringsense > .owner_minimallexreferences > .ownertype_abbreviation {
    font-style: italic;
 }
-.reversalindexentry .owner_minimallexreferences > .configtargets > .headword[lang|= "bzh"]{
+.reversalindexentry > .referringsenses > .sensecontent > .referringsense > .owner_minimallexreferences > .configtargets > .headword[lang|= "bzh"]{
    font-weight: bold;
 }
-.reversalindexentry .owner_minimallexreferences > .configtargets > .headword {
+.reversalindexentry > .referringsenses > .sensecontent > .referringsense > .owner_minimallexreferences > .configtargets > .headword {
    font-weight: bold;
 }
-.reversalindexentry .morphosyntaxanalysis {
+.reversalindexentry > .referringsenses > .sensecontent > .referringsense > .morphosyntaxanalysis {
    font-style: italic;
 }
-.reversalindexentry .example > span[lang|= "bzh"]{
+.reversalindexentry > .referringsenses > .sensecontent > .referringsense > .examplescontents .examplescontent > .example > span[lang|= "bzh"]{
    font-style: italic;
 }
-.reversalindexentry .example > span {
+.reversalindexentry > .referringsenses > .sensecontent > .referringsense > .examplescontents .examplescontent > .example > span {
    font-style: italic;
 }
-.reversalindexentry .lexsensereference > .ownertype_abbreviation > span[lang|= "en"]{
+.reversalindexentry > .referringsenses > .sensecontent > .referringsense > .lexsensereferences .lexsensereference > .ownertype_abbreviation > span[lang|= "en"]{
    font-style: italic;
 }
-.reversalindexentry .lexsensereference > .ownertype_abbreviation > span {
+.reversalindexentry > .referringsenses > .sensecontent > .referringsense > .lexsensereferences .lexsensereference > .ownertype_abbreviation > span {
    font-style: italic;
 }
-.reversalindexentry .lexsensereference > .configtargets .configtarget > .headword > span[lang|= "bzh"]{
+.reversalindexentry > .referringsenses > .sensecontent > .referringsense > .lexsensereferences .lexsensereference > .configtargets .configtarget > .headword > span[lang|= "bzh"]{
    font-weight: bold;
 }
-.reversalindexentry .lexsensereference > .configtargets .configtarget > .headword > span {
+.reversalindexentry > .referringsenses > .sensecontent > .referringsense > .lexsensereferences .lexsensereference > .configtargets .configtarget > .headword > span {
    font-weight: bold;
 }
