--- a/src/Test/CssSimpler/TestFiles/Expected/PseudoSubentry.css
+++ b/src/Test/CssSimpler/TestFiles/Expected/PseudoSubentry.css
@@ -22,6 +22,12 @@ span[lang|= "bzh"]{
    font-family: 'Charis SIL',serif;
    font-size: 10pt;
 }
+div.entry {
+   text-indent: -36pt;
+   margin-left: 45pt;
+   padding-bottom: 2pt;
+   padding-top: 1pt;
+}
 a {
    text-decoration: inherit;
    color: inherit;
@@ -37,31 +43,31 @@ a {
    padding-top: 1pt;
    font-size: 10pt;
 }
-.entry .senses .sensecontent .sensenumber {
+.entry > .senses > .sensecontent .sensenumber {
    font-weight: bold;
 }
-.entry .senses .morphosyntaxanalysis {
+.entry > .senses > .sensecontent > .sharedgrammaticalinfo > .morphosyntaxanalysis {
    font-style: italic;
 }
-.entry .senses .morphosyntaxanalysis {
+.entry > .senses > .sensecontent > .sense > .morphosyntaxanalysis {
    font-style: italic;
 }
-.entry .senses .example > span[lang|= "bzh"]{
+.entry > .senses > .sensecontent > .sense > .examplescontents .examplescontent > .example > span[lang|= "bzh"]{
    font-style: italic;
 }
-.entry .senses .example > span {
+.entry > .senses > .sensecontent > .sense > .examplescontents .examplescontent > .example > span {
    font-style: italic;
 }
-.entry .senses .lexsensereference > .ownertype_abbreviation > span[lang|= "en"]{
+.entry > .senses > .sensecontent > .sense > .lexsensereferences .lexsensereference > .ownertype_abbreviation > span[lang|= "en"]{
    font-style: italic;
 }
-.entry .senses .lexsensereference > .ownertype_abbreviation > span {
+.entry > .senses > .sensecontent > .sense > .lexsensereferences .lexsensereference > .ownertype_abbreviation > span {
    font-style: italic;
 }
-.entry .senses .senses .sensecontent .sensenumber {
+.entry > .senses > .sensecontent > .sense > .senses > .sensecontent .sensenumber {
    font-weight: bold;
 }
-.entry .subentries .subentry {
+.entry > .subentries .subentry {
    text-indent: 0pt;
    margin-left: 0pt;
    padding-bottom: 2pt;
@@ -69,7 +75,7 @@ a {
    font-size: 10pt;
    display: block;
 }
-.entry .subentries .subentry {
+.entry > .subentries .subentry {
    text-indent: 0pt;
    margin-left: 0pt;
    padding-bottom: 2pt;
@@ -90,33 +96,33 @@ a {
 .mainentrysubentries .mainentrysubentry > .headword > span {
    font-weight: bold;
 }
-.mainentrysubentries .senses .sensecontent .sensenumber {
+.mainentrysubentries .mainentrysubentry > .senses > .sensecontent .sensenumber {
    font-weight: bold;
 }
-.mainentrysubentries .senses .morphosyntaxanalysis {
+.mainentrysubentries .mainentrysubentry > .senses > .sensecontent > .sharedgrammaticalinfo > .morphosyntaxanalysis {
    font-style: italic;
 }
-.mainentrysubentries .senses .morphosyntaxanalysis {
+.mainentrysubentries .mainentrysubentry > .senses > .sensecontent > .sense > .morphosyntaxanalysis {
    font-style: italic;
 }
-.mainentrysubentries .senses .example > span[lang|= "bzh"]{
+.mainentrysubentries .mainentrysubentry > .senses > .sensecontent > .sense > .examplescontents .examplescontent > .example > span[lang|= "bzh"]{
    font-style: italic;
 }
-.mainentrysubentries .senses .example > span {
+.mainentrysubentries .mainentrysubentry > .senses > .sensecontent > .sense > .examplescontents .examplescontent > .example > span {
    font-style: italic;
 }
-.mainentrysubentries .senses .lexsensereference > .ownertype_abbreviation > span[lang|= "en"]{
+.mainentrysubentries .mainentrysubentry > .senses > .sensecontent > .sense > .lexsensereferences .lexsensereference > .ownertype_abbreviation > span[lang|= "en"]{
    font-style: italic;
 }
-.mainentrysubentries .senses .lexsensereference > .ownertype_abbreviation > span {
+.mainentrysubentries .mainentrysubentry > .senses > .sensecontent > .sense > .lexsensereferences .lexsensereference > .ownertype_abbreviation > span {
    font-style: italic;
 }
-.mainentrysubentries .senses .senses .sensecontent .sensenumber {
+.mainentrysubentries .mainentrysubentry > .senses > .sensecontent > .sense > .senses > .sensecontent .sensenumber {
    font-weight: bold;
 }
-.mainentrysubentries .subentries .subentry {
+.mainentrysubentries .mainentrysubentry > .subentries .subentry {
    display: block;
 }
-.mainentrysubentries .subentries .subentry {
+.mainentrysubentries .mainentrysubentry > .subentries .subentry {
    display: block;
 }
